--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>Undead Universe</title>
+<title>Adv Web & Mobile</title>
 <head>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <!-- Navbar (sit on top) -->
 <nav>
-  <h2>Undead Universe</h2>
+  <h2>Adv Web & Mobile</h2>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="facts.html">Facts</a></li>
@@ -16,7 +16,7 @@
 </nav>
  <!-- Hero Section -->
 <section class="hero">
-  <h1>Welcome to Undead Universe!</h1>
+  <h1>Welcome!</h1>
   <p>Explore the World of Zombies</p>
   <p>Are You Prepared?</p>
 </section>
