--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>Adv Web & Mobile</h2>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="facts.html">Facts</a></li>
+    <li><a href="project.html">Project</a></li>
     <li><a href="quiz.html">Quiz</a></li>
   </ul>
 </nav>
@@ -18,7 +18,6 @@
 <section class="hero">
   <h1>Welcome!</h1>
   <p>Mikayla Russell</p>
-  <p>Kennesaw State University</p>
 </section>
 <!-- Featured Content Section 
 <section class="featured-content">
@@ -39,9 +38,21 @@
 <!-- Zombie Survival Guide Section -->
 <section class="survival-guide">
   <p><strong>Student:</strong> Mikayla Russell</p>
-  <p><strong>Course:</strong> IT 6203 - Advanced Web and Mobile Development</p>
+  <p><strong>Course:</strong> IT 4403 - Advanced Web and Mobile Development</p>
   <p><strong>Institution:</strong> Kennesaw State University</p>
   <p><a href="http://ccse.kennesaw.edu/it" target="_blank">Department of Information Technology</a></p>
+  
+    <h2>Project Overview</h2>
+  <p>This website serves as my individual project for IT 4403. It uses web development techniques like JSON data display, jQuery, and milestone tracking.</p>
+
+  <h3>Milestone Table of Contents</h3>
+  <ul>
+    <li><a href="milestone1.html">Milestone 1: JSON Book Display</a></li>
+    <li><a href="#">Milestone 2 (Coming Soon)</a></li>
+    <li><a href="#">Milestone 3 (Coming Soon)</a></li>
+    <li><a href="#">Milestone 4 (Coming Soon)</a></li>
+  </ul>
+</section>
 
   <!-- <h4>Survival Tips:</h4>
   <ul class="guide-list">
