--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
     <li><a href="quiz.html">Quiz</a></li>
   </ul>
 </nav>
-main class="container">
+<main class="container">
     <h1>Milestone 1: JSON Book Display</h1>
 
     <section>
