--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
   <h2>Adv Web & Mobile</h2>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="project.html">Facts</a></li>
+    <li><a href="project.html">Project</a></li>
     <li><a href="quiz.html">Quiz</a></li>
   </ul>
 </nav>
