--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
   <h2>Undead Universe</h2>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="facts.html">Facts</a></li>
+    <li><a href="project.html">Project</a></li>
     <li><a href="quiz.html">Quiz</a></li>
   </ul>
 </nav>
