--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html>
-<body>
-<title>Adv Web & Mobile</title>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <title>Adv Web & Mobile</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-<!-- Navbar (sit on top) -->
-<nav>
-  <h2>Adv Web & Mobile</h2>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="project.html">Project</a></li>
-    <li><a href="quiz.html">Quiz</a></li>
-  </ul>
-</nav>
- <!-- Hero Section -->
+<body>
+
+  <!-- Navbar -->
+  <nav>
+    <h2>Adv Web & Mobile</h2>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="project.html">Project</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
   <section class="hero">
     <h1>Welcome to My Project</h1>
     <p>This site showcases my work for IT 4403.</p>
@@ -42,3 +45,4 @@
 
 </body>
 </html>
+
