--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h1>Welcome to My Project</h1>
-    <p>This site showcases my work for IT 4403.</p>
+    <h1>Welcome!</h1>
+    <p>This Site Showcases my Work for IT 4403.</p>
   </section>
 
   <!-- Main Content -->
