--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
 
 <!-- Navbar (sit on top) -->
 <nav>
-  <h2>Undead Universe</h2>
+  <h2>Adv Web & Mobile</h2>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="project.html">Project</a></li>
