--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="project.html">Project</a></li>
-    <li><a href="quiz.html">Quiz</a></li>
+    <li><a href="quiz.html">Coming Soon</a></li>
   </ul>
 </nav>
 
