--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
   <h2>Adv Web & Mobile</h2>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="project.html">Project</a></li>
+    <li><a href="single-books.html">Project</a></li>
     <li><a href="quiz.html">Coming Soon</a></li>
   </ul>
 </nav>
