--- a/single-books.html
+++ b/single-books.html
@@ -2,69 +2,94 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JSON Book Display</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Single Book Display</title>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+      margin: 0;
+    }
+
+    nav {
+      background-color: #333;
+      color: #fff;
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem 2rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+    }
+
+    nav li {
+      margin-left: 1.5rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #e91e63;
+    }
+
+    main {
+      max-width: 700px;
+      margin: 2rem auto;
+      padding: 1.5rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    img {
+      margin-top: 1rem;
+      max-width: 200px;
+    }
+
+    h2 {
+      margin-bottom: 1rem;
+    }
+
+    .book-card {
+      margin-top: 1.5rem;
+    }
+  </style>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav>
-  <h2>Adv Web & Mobile</h2>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="single-books.html">Project</a></li>
-    <li><a href="quiz.html">Coming Soon</a></li>
-  </ul>
-</nav>
+  <nav>
+    <h2>Adv Web & Mobile</h2>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="single-book.html">Project</a></li>
+      <li><a href="quiz.html">Coming Soon</a></li>
+    </ul>
+  </nav>
 
-<!-- Main Content -->
-<main class="container">
-  <h1>Milestone 1: JSON Book Display</h1>
+  <main>
+    <h2>📖 Single Book Display</h2>
+    <div id="single-book" class="book-card"></div>
+  </main>
 
-  <section>
-    <h2>📖 Single Book</h2>
-    <div id="single-book" class="book-display"></div>
-    <p><a href="multiple-books.html">Multiple Books</a></p>
-  </section>
-
-  <section>
-    <h2>📚 Multiple Books</h2>
-    <div id="multiple-books" class="book-list"></div>
-  </section>
-</main>
-
-<!-- jQuery Script -->
-<script>
-  // Load and display one book
-  $.getJSON("json/google-books-book.json", function(data) {
-    const bookHTML = `
-      <div class="book-card">
+  <script>
+    $.getJSON("json/google-books-book.json", function(data) {
+      const bookHTML = `
         <h3>${data.volumeInfo.title}</h3>
         <p><strong>Author(s):</strong> ${data.volumeInfo.authors?.join(', ')}</p>
         <p><strong>Description:</strong> ${data.volumeInfo.description}</p>
         <img src="${data.volumeInfo.imageLinks?.thumbnail}" alt="Book Cover">
-      </div>
-    `;
-    $('#single-book').html(bookHTML);
-  });
-     
-  // Load and display multiple books
-  $.getJSON("json/google-books-search.json", function(data) {
-    let output = "";
-    data.items.forEach(book => {
-      output += `
-        <div class="book-card">
-          <h4>${book.volumeInfo.title}</h4>
-          <p><strong>Author(s):</strong> ${book.volumeInfo.authors?.join(', ')}</p>
-          <img src="${book.volumeInfo.imageLinks?.thumbnail}" alt="Thumbnail">
-        </div>
       `;
+      $('#single-book').html(bookHTML);
     });
-    $('#multiple-books').html(output);
-  });
-</script>
-
+  </script>
 </body>
 </html>
 
