--- a/single-books.html
+++ b/single-books.html
@@ -90,6 +90,7 @@
       $('#single-book').html(bookHTML);
     });
   </script>
+  <p><a href="multiple-books.html">Multiple Books</a></p>
 </body>
 </html>
 
