--- a/multiple-books.html
+++ b/multiple-books.html
@@ -13,7 +13,7 @@
 
     nav {
       background-color: #333;
-      color: #fff;
+      color: #F7CAC9;
       display: flex;
       justify-content: space-between;
       padding: 1rem 2rem;
@@ -35,7 +35,7 @@
     }
 
     nav a:hover {
-      color: #e91e63;
+      color: #92A8D1;
     }
 
     main {
