--- a/single-books.html
+++ b/single-books.html
@@ -14,7 +14,7 @@
 
     nav {
       background-color: #333;
-      color: #fff;
+      color: #F7CAC9;
       display: flex;
       justify-content: space-between;
       padding: 1rem 2rem;
@@ -36,7 +36,7 @@
     }
 
     nav a:hover {
-      color: #e91e63;
+      color: #92A8D1;
     }
 
     main {
