--- a/single-books.html
+++ b/single-books.html
@@ -13,8 +13,8 @@
     }
 
     nav {
-      background-color: #333;
-      color: #F7CAC9;
+      background-color: #F7CAC9;
+      color: #333;
       display: flex;
       justify-content: space-between;
       padding: 1rem 2rem;
