--- a/multiple-books.html
+++ b/multiple-books.html
@@ -12,8 +12,8 @@
     }
 
     nav {
-      background-color: #333;
-      color: #F7CAC9;
+      background-color: #F7CAC9;
+      color: #333;
       display: flex;
       justify-content: space-between;
       padding: 1rem 2rem;
@@ -74,8 +74,8 @@
     <h2>Adv Web & Mobile</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="single-book.html">Single Book</a></li>
-      <li><a href="multiple-books.html">Multiple Books</a></li>
+      <li><a href="single-book.html">Project</a></li>
+      <li><a href="quiz.html">Coming Soon</a></li>
     </ul>
   </nav>
 
