--- a/multiple-books.html
+++ b/multiple-books.html
@@ -13,7 +13,7 @@
 
     nav {
       background-color: #F7CAC9;
-      color: #333;
+      color: white;
       display: flex;
       justify-content: space-between;
       padding: 1rem 2rem;
