--- a/multiple-books.html
+++ b/multiple-books.html
@@ -74,16 +74,16 @@
     <h2>Adv Web & Mobile</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="single-book.html">Project</a></li>
+      <li><a href="single-books.html">Project</a></li>
       <li><a href="quiz.html">Coming Soon</a></li>
     </ul>
   </nav>
-
+  
   <main>
     <h2>📚 Multiple Books Display</h2>
     <div id="multiple-books" class="book-list"></div>
   </main>
-  <p><a href="single-books.html">Back</a></p>
+  
   <script>
     $.getJSON("json/google-books-search.json", function(data) {
       let output = "";
@@ -94,6 +94,7 @@
             <p><strong>Author(s):</strong> ${book.volumeInfo.authors?.join(', ')}</p>
             <img src="${book.volumeInfo.imageLinks?.thumbnail}" alt="Thumbnail">
           </div>
+          <p><a href="single-books.html">Back</a></p>
         `;
       });
       $('#multiple-books').html(output);
