--- a/single-books.html
+++ b/single-books.html
@@ -69,7 +69,7 @@
     <h2>Adv Web & Mobile</h2>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="single-book.html">Project</a></li>
+      <li><a href="single-books.html">Project</a></li>
       <li><a href="quiz.html">Coming Soon</a></li>
     </ul>
   </nav>
