--- a/multiple-books.html
+++ b/multiple-books.html
@@ -66,6 +66,22 @@
       max-width: 100px;
       margin-bottom: 0.5rem;
     }
+
+    /* button*/
+    .nav-button {
+    background-color: #92A8D1;
+    color: white;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .nav-button:hover {
+    background-color: #7a8eb8;
+  }
   </style>
 </head>
 <body>
@@ -100,5 +116,12 @@
       $('#multiple-books').html(output);
     });
   </script>
+
+   <p style="text-align: center;">
+  <a href="multiple-books.html">
+    <button class="nav-button">Go to Multiple Books Page</button>
+  </a>
+</p>
+  
 </body>
 </html>
