--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Adv Web & Mobile</title>
 
   <style>
-    /* Reset and Base */
     * {
       margin: 0;
       padding: 0;
@@ -19,7 +18,7 @@
       line-height: 1.6;
     }
 
-    /* Navbar */
+    /* navbar */
     nav {
       display: flex;
       justify-content: space-between;
@@ -53,7 +52,7 @@
       color: #92A8D1;
     }
 
-    /* Hero */
+    /* hero */
     .hero {
       background-color: #92A8D1;
       color: white;
@@ -70,7 +69,7 @@
       font-size: 1.2rem;
     }
 
-    /* Main Content */
+    /* main content */
     main.container {
       max-width: 800px;
       margin: 2rem auto;
@@ -113,7 +112,7 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- navbar -->
   <nav>
     <h2>Adv Web & Mobile</h2>
     <ul>
@@ -123,13 +122,13 @@
     </ul>
   </nav>
 
-  <!-- Hero -->
+  <!-- hero -->
   <section class="hero">
     <h1>Welcome!</h1>
     <p>This site showcases my work for IT 4403.</p>
   </section>
 
-  <!-- Main Content -->
+  <!-- main content -->
   <main class="container">
     <h2>👩‍💻 Student & Course Info</h2>
     <p><strong>Student:</strong> Mikayla Russell</p>
