--- a/single-books.html
+++ b/single-books.html
@@ -11,7 +11,7 @@
       color: #333;
       margin: 0;
     }
-
+    /* navbar */
     nav {
       background-color: #F7CAC9;
       color: white;
@@ -39,6 +39,7 @@
       color: #92A8D1;
     }
 
+    /* main content*/ 
     main {
       max-width: 700px;
       margin: 2rem auto;
@@ -81,6 +82,7 @@
 </head>
 <body>
 
+  <!-- navbar -->
   <nav>
     <h2>Adv Web & Mobile</h2>
     <ul>
@@ -90,6 +92,7 @@
     </ul>
   </nav>
 
+  <!-- main content -->
   <main>
     <h2>📖 Single Book Display</h2>
     <div id="single-book" class="book-card"></div>
@@ -107,6 +110,7 @@
     });
   </script>
 
+  <!-- button -->
   <p style="text-align: center;">
   <a href="multiple-books.html">
     <button class="nav-button">Go to Multiple Books Page</button>
