--- a/multiple-books.html
+++ b/multiple-books.html
@@ -11,6 +11,7 @@
       margin: 0;
     }
 
+    /* navbar */
     nav {
       background-color: #F7CAC9;
       color: white;
@@ -38,6 +39,7 @@
       color: #92A8D1;
     }
 
+    /* main content */
     main {
       max-width: 900px;
       margin: 2rem auto;
@@ -86,6 +88,7 @@
 </head>
 <body>
 
+  <!-- navbar -->
   <nav>
     <h2>Adv Web & Mobile</h2>
     <ul>
@@ -94,12 +97,13 @@
       <li><a href="quiz.html">Coming Soon</a></li>
     </ul>
   </nav>
-  
+
+  <!-- main content -->
   <main>
     <h2>📚 Multiple Books Display</h2>
     <div id="multiple-books" class="book-list"></div>
   </main>
-  
+
   <script>
     $.getJSON("json/google-books-search.json", function(data) {
       let output = "";
@@ -116,6 +120,7 @@
     });
   </script>
 
+  <!-- button -->
    <p style="text-align: center;">
   <a href="single-books.html">
     <button class="nav-button">Back</button>
