--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <h3>📌 Milestone Table of Contents</h3>
     <ul>
       <li><a href="single-books.html">Milestone 1: JSON Book Display</a></li>
-      <li><a href="#">Milestone 2 (Coming Soon)</a></li>
+      <li><a href="book-search.html">Milestone 2: Book Search</a></li>
       <li><a href="#">Milestone 3 (Coming Soon)</a></li>
       <li><a href="#">Milestone 4 (Coming Soon)</a></li>
     </ul>
