--- a/book-search.html
+++ b/book-search.html
@@ -7,11 +7,37 @@
   <style>
     /* Basic clean style */
     body { font-family: Arial, sans-serif; max-width: 900px; margin: 20px auto; }
-    nav a { margin-right: 20px; text-decoration:none; color: #333; font-weight:bold;}
-    nav a:hover { color: #e91e63; }
     .book { margin-bottom: 10px; }
     .book img { vertical-align: middle; max-height: 60px; margin-right: 10px; }
     .pagination { margin-top: 20px; }
+
+    /* navbar */
+    nav {
+      background-color: #F7CAC9;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem 2rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+    }
+
+    nav li {
+      margin-left: 1.5rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #92A8D1;
+    }
   </style>
 </head>
 <body>
