--- a/book-search.html
+++ b/book-search.html
@@ -38,6 +38,22 @@
     nav a:hover {
       color: #92A8D1;
     }
+
+    /* button */
+  .nav-button {
+    background-color: #92A8D1;
+    color: white;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .nav-button:hover {
+    background-color: #7a8eb8;
+  }
   </style>
 </head>
 <body>
