--- a/book-search.html
+++ b/book-search.html
@@ -5,8 +5,13 @@
   <title>Milestone 2: Book Search</title>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <style>
-    /* Basic clean style */
-    body { font-family: Arial, sans-serif; max-width: 900px; margin: 20px auto; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+      margin: 0;
+    }
+    
     .book { margin-bottom: 10px; }
     .book img { vertical-align: middle; max-height: 60px; margin-right: 10px; }
     .pagination { margin-top: 20px; }
