--- a/book-search.html
+++ b/book-search.html
@@ -64,8 +64,11 @@
 <body>
 
 <nav>
-  <a href="index.html">Home</a>
-  <a href="bookshelf.html">My Bookshelf</a>
+  <h2>Adv Web & Mobile</h2>
+  <ul>
+    <li></li><a href="index.html">Home</a>
+    <li></li><a href="bookshelf.html">My Bookshelf</a>
+  </ul>
 </nav>
 
 <h1>Book Search</h1>
