--- a/book-details.html
+++ b/book-details.html
@@ -12,17 +12,34 @@
       margin: 0;
     }
 
+    /* navbar */
+    nav {
+      background-color: #F7CAC9;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem 2rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+    }
+
+    nav li {
+      margin-left: 1.5rem;
+    }
+
     nav a {
-      margin-right: 20px;
+      color: white;
       text-decoration: none;
-      color: #333;
       font-weight: bold;
     }
 
     nav a:hover {
-      color: #e91e63;
+      color: #92A8D1;
     }
-
+    
     h1 {
       margin-bottom: 20px;
     }
@@ -45,6 +62,23 @@
     .back {
       margin-top: 30px;
     }
+
+    /* button */
+  .nav-button {
+    background-color: #92A8D1;
+    color: white;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .nav-button:hover {
+    background-color: #7a8eb8;
+  }
+    
   </style>
 </head>
 <body>
@@ -57,9 +91,12 @@
 <h1>Book Details</h1>
 <div id="book-details"></div>
 
-<div class="back">
-  <a href="index.html">← Back to Search</a>
-</div>
+<!-- button -->
+  <p style="text-align: center;">
+  <a href="multiple-books.html">
+    <button class="nav-button">Go to Multiple Books Page</button>
+  </a>
+</p>
 
 <script>
   // Get query string parameter (book ID)
