--- a/book-details.html
+++ b/book-details.html
@@ -84,8 +84,11 @@
 <body>
 
 <nav>
-  <a href="index.html">Home</a>
-  <a href="bookshelf.html">My Bookshelf</a>
+  <h2>Adv Web & Mobile</h2>
+  <ul>
+    <li></li><a href="index.html">Home</a>
+    <li></li><a href="bookshelf.html">My Bookshelf</a>
+  </ul>
 </nav>
 
 <h1>Book Details</h1>
@@ -93,8 +96,8 @@
 
 <!-- button -->
   <p style="text-align: center;">
-  <a href="multiple-books.html">
-    <button class="nav-button">Go to Multiple Books Page</button>
+  <a href="book-search.html">
+    <button class="nav-button">Go Back to Book Search</button>
   </a>
 </p>
 
