--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -1,1 +1,238 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Milestone 3 - Book Explorer</title>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+      margin: 0;
+    }
+
+    /* navbar */
+    nav {
+      background-color: #F7CAC9;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      padding: 1rem 2rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+    }
+
+    nav li {
+      margin-left: 1.5rem;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: #92A8D1;
+    }
+
+    
+    h1, h2 {
+      color: #2c3e50;
+    }
+
+    .search-bar {
+      margin-bottom: 20px;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      width: 300px;
+    }
+
+    button {
+      padding: 10px 15px;
+      background: #92A8D1;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #7698c6;
+    }
+
+    .books, .bookshelf {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+
+    .book {
+      background: white;
+      border: 1px solid #ccc;
+      padding: 10px;
+      width: 150px;
+      cursor: pointer;
+      text-align: center;
+    }
+
+    .book img {
+      max-width: 100px;
+      height: auto;
+      margin-bottom: 10px;
+    }
+
+    .pagination {
+      margin-bottom: 30px;
+    }
+
+    .pagination button {
+      margin-right: 5px;
+    }
+
+    .details {
+      background: #fff;
+      padding: 20px;
+      border: 1px solid #ccc;
+      max-width: 600px;
+    }
+  </style>
+</head>
+<body>
+
+<h1>📚 Book Explorer</h1>
+
+<!-- Search Section -->
+<div class="search-bar">
+  <input type="text" id="searchInput" placeholder="Search for books..." />
+  <button id="searchBtn">Search</button>
+</div>
+
+<!-- Pagination -->
+<div class="pagination" id="pagination"></div>
+
+<!-- Search Results -->
+<h2>🔎 Search Results</h2>
+<div class="books" id="searchResults"></div>
+
+<!-- Faux Bookshelf -->
+<h2>📖 My Bookshelf</h2>
+<div class="bookshelf" id="bookshelf">
+  <!-- Coraline -->
+  <div class="book" data-id="Pz1NAgAAQBAJ">
+    <img src="https://books.google.com/books/content?id=Pz1NAgAAQBAJ&printsec=frontcover&img=1&zoom=1" alt="Coraline" />
+    <div>Coraline</div>
+  </div>
+  <!-- Winter by Marissa Meyer -->
+  <div class="book" data-id="I4G-CgAAQBAJ">
+    <img src="https://books.google.com/books/content?id=I4G-CgAAQBAJ&printsec=frontcover&img=1&zoom=1" alt="Winter" />
+    <div>Winter</div>
+  </div>
+  <!-- Miss Peregrine's Home -->
+  <div class="book" data-id="uUbBAwAAQBAJ">
+    <img src="https://books.google.com/books/content?id=uUbBAwAAQBAJ&printsec=frontcover&img=1&zoom=1" alt="Miss Peregrine's" />
+    <div>Miss Peregrine's Home</div>
+  </div>
+</div>
+
+<!-- Book Details Section -->
+<h2>📘 Book Details</h2>
+<div class="details" id="bookDetails">Click a book to learn more!</div>
+
+<!-- jQuery Script -->
+<script>
+  const RESULTS_PER_PAGE = 10;
+  let searchResults = [];
+
+  function renderPagination(totalItems) {
+    $('#pagination').empty();
+    const pageCount = Math.ceil(totalItems / RESULTS_PER_PAGE);
+    for (let i = 1; i <= Math.min(pageCount, 5); i++) {
+      $('#pagination').append(`<button class="page-btn" data-page="${i}">${i}</button>`);
+    }
+  }
+
+  function renderSearchResults(page = 1) {
+    const start = (page - 1) * RESULTS_PER_PAGE;
+    const end = start + RESULTS_PER_PAGE;
+    const currentPageBooks = searchResults.slice(start, end);
+
+    $('#searchResults').empty();
+    currentPageBooks.forEach(book => {
+      const info = book.volumeInfo;
+      const title = info.title || 'No Title';
+      const thumbnail = info.imageLinks?.thumbnail || '';
+      const id = book.id;
+
+      $('#searchResults').append(`
+        <div class="book" data-id="${id}">
+          ${thumbnail ? `<img src="${thumbnail}" alt="${title}">` : ''}
+          <div>${title}</div>
+        </div>
+      `);
+    });
+  }
+
+  function loadBookDetails(bookId) {
+    const apiURL = `https://www.googleapis.com/books/v1/volumes/${bookId}`;
+    $.ajax({
+      url: apiURL,
+      method: 'GET',
+      success: function (data) {
+        const info = data.volumeInfo;
+        $('#bookDetails').html(`
+          <h3>${info.title}</h3>
+          <p><strong>Authors:</strong> ${info.authors?.join(', ') || 'Unknown'}</p>
+          <p><strong>Publisher:</strong> ${info.publisher || 'Unknown'}</p>
+          <p><strong>Published Date:</strong> ${info.publishedDate || 'Unknown'}</p>
+          <p><strong>Description:</strong> ${info.description || 'No description available.'}</p>
+          ${info.imageLinks?.thumbnail ? `<img src="${info.imageLinks.thumbnail}" alt="${info.title}">` : ''}
+        `);
+      },
+      error: function () {
+        $('#bookDetails').html('<p>Error loading book details.</p>');
+      }
+    });
+  }
+
+  $('#searchBtn').on('click', function () {
+    const query = $('#searchInput').val().trim();
+    if (!query) return;
+
+    const apiURL = `https://www.googleapis.com/books/v1/volumes?q=${encodeURIComponent(query)}&maxResults=40`;
+
+    $.ajax({
+      url: apiURL,
+      method: 'GET',
+      success: function (data) {
+        searchResults = data.items || [];
+        renderPagination(searchResults.length);
+        renderSearchResults(1);
+      },
+      error: function () {
+        $('#searchResults').html('<p>Error loading search results.</p>');
+      }
+    });
+  });
+
+  // Handle pagination click
+  $(document).on('click', '.page-btn', function () {
+    const page = parseInt($(this).data('page'));
+    renderSearchResults(page);
+  });
+
+  // Handle click for book (from search or bookshelf)
+  $(document).on('click', '.book', function () {
+    const bookId = $(this).data('id');
+    loadBookDetails(bookId);
+  });
+</script>
+</body>
+</html>
 
