--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -126,7 +126,7 @@
 <div class="bookshelf" id="bookshelf">
   <!-- Coraline -->
   <div class="book" data-id="Pz1NAgAAQBAJ">
-    <img src="https://books.google.com/books/content?id=Pz1NAgAAQBAJ&printsec=frontcover&img=1&zoom=1" alt="Coraline" />
+    <img src="https://m.media-amazon.com/images/I/71FvtJvTkRL.jpg&printsec=frontcover&img=1&zoom=1" alt="Coraline" />
     <div>Coraline</div>
   </div>
   <!-- Winter by Marissa Meyer -->
