--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -131,7 +131,7 @@
   </div>
   <!-- Winter by Marissa Meyer -->
   <div class="book" data-id="I4G-CgAAQBAJ">
-    <img src="https://books.google.com/books/content?id=I4G-CgAAQBAJ&printsec=frontcover&img=1&zoom=1" alt="Winter" />
+    <img src="https://mpd-biblio-covers.imgix.net/9781250768926&printsec=frontcover&img=1&zoom=1" alt="Winter" />
     <div>Winter</div>
   </div>
   <!-- Miss Peregrine's Home -->
