--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -131,7 +131,7 @@
   </div>
   <!-- Winter by Marissa Meyer -->
   <div class="book" data-id="I4G-CgAAQBAJ">
-    <img src="https://mpd-biblio-covers.imgix.net/9781250768926&printsec=frontcover&img=1&zoom=1" alt="Winter" />
+    <img src="https://images-na.ssl-images-amazon.com/images/I/814kej5Lx8L._AC_UL210_SR210,210_&printsec=frontcover&img=1&zoom=1" alt="Winter" />
     <div>Winter</div>
   </div>
   <!-- Miss Peregrine's Home -->
