--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -125,8 +125,8 @@
 <h2>📖 My Bookshelf</h2>
 <div class="bookshelf" id="bookshelf">
   <!-- Coraline -->
-  <div class="book" data-id="Pz1NAgAAQBAJ">
-    <img src="https://m.media-amazon.com/images/I/71FvtJvTkRL&printsec=frontcover&img=1&zoom=1" alt="Coraline" />
+  <div class="book" data-id="3tvInwtsoCcC">
+    <img src="https://books.google.com/books/content?id=3tvInwtsoCcC&printsec=frontcover&img=1&zoom=1&imgtk=AFLRE71nFu8C9SYw4zwvh-0xAIs-q5mZl5xIH3-8mZxzelEUJAJrGwYI24I9fdn4tIH2zaehhQffpmej38BFaXgpjddPatbdPp8_FLzBBg0DC0bBUXfI04wgLn9ur9ftoiXtFuHTppWl&printsec=frontcover&img=1&zoom=1" alt="Coraline" />
     <div>Coraline</div>
   </div>
   <!-- Winter by Marissa Meyer -->
