--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -126,18 +126,18 @@
 <div class="bookshelf" id="bookshelf">
   <!-- Coraline -->
   <div class="book" data-id="3tvInwtsoCcC">
-    <img src="https://books.google.com/books/content?id=3tvInwtsoCcC&printsec=frontcover&img=1&zoom=1&imgtk=AFLRE71nFu8C9SYw4zwvh-0xAIs-q5mZl5xIH3-8mZxzelEUJAJrGwYI24I9fdn4tIH2zaehhQffpmej38BFaXgpjddPatbdPp8_FLzBBg0DC0bBUXfI04wgLn9ur9ftoiXtFuHTppWl&printsec=frontcover&img=1&zoom=1" alt="Coraline" />
+    <img src="https://books.google.com/books/content?id=3tvInwtsoCcC&printsec=frontcover&img=1&zoom=1&imgtk=AFLRE71nFu8C9SYw4zwvh-0xAIs-q5mZl5xIH3-8mZxzelEUJAJrGwYI24I9fdn4tIH2zaehhQffpmej38BFaXgpjddPatbdPp8_FLzBBg0DC0bBUXfI04wgLn9ur9ftoiXtFuHTppWl" alt="Coraline" />
     <div>Coraline</div>
   </div>
   <!-- Winter by Marissa Meyer -->
-  <div class="book" data-id="I4G-CgAAQBAJ">
-    <img src="https://images-na.ssl-images-amazon.com/images/I/814kej5Lx8L._AC_UL210_SR210,210_&printsec=frontcover&img=1&zoom=1" alt="Winter" />
+  <div class="book" data-id="QpfBwAAQBAJ">
+    <img src="https://books.google.com/books/publisher/content?id=_QpfBwAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&imgtk=AFLRE71Z3JpkLsoadYYva1JBRTjLZ5A8dQjkR8WVR2_RnOeKZ_2HXD48vc1zSwj8UtBKUpZrQeyv6ZnALsEM-GkFMESv830tSyYbrylzLU4wlkDu02HEV1X8NYfLvDQ-o-jy0-K0iDgf" alt="Winter" />
     <div>Winter</div>
   </div>
   <!-- Miss Peregrine's Home -->
-  <div class="book" data-id="uUbBAwAAQBAJ">
-    <img src="https://books.google.com/books/content?id=uUbBAwAAQBAJ&printsec=frontcover&img=1&zoom=1" alt="Miss Peregrine's" />
-    <div>Miss Peregrine's Home</div>
+  <div class="book" data-id="nPVnBgAAQBAJ">
+    <img src="https://books.google.com/books/publisher/content?id=nPVnBgAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&imgtk=AFLRE72XQYQL9tUPFRN_j3iWrIa9HB2oxvbYEyWkegNy54I5TnU11s4vHDNDY-ED_y_LREKNAiGqQ5g7hBaSyvHO5sBQSbacx1oH7IFx-nlggXJrdmnpnY1PhBxDW-kjZDRYwcCRthQN" alt="Miss Peregrine's" />
+    <div>Miss Peregrine's Home for Peculiar Children</div>
   </div>
 </div>
 
