--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -55,15 +55,18 @@
     }
 
     button {
-      padding: 10px 15px;
-      background: #92A8D1;
-      color: white;
-      border: none;
-      cursor: pointer;
+    background-color: #92A8D1;
+    color: white;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
     }
 
     button:hover {
-      background: #7698c6;
+    background-color: #7a8eb8;
     }
 
     .books, .bookshelf {
@@ -102,6 +105,7 @@
       border: 1px solid #ccc;
       max-width: 600px;
     }
+    
   </style>
 </head>
 <body>
@@ -135,7 +139,7 @@
   </div>
   
   <!-- winter -->
-  <div class="book" data-id="QpfBwAAQBAJ">
+  <div class="book" data-id="_QpfBwAAQBAJ">
     <img src="https://books.google.com/books/publisher/content?id=_QpfBwAAQBAJ&printsec=frontcover&img=1&zoom=1&edge=curl&imgtk=AFLRE71Z3JpkLsoadYYva1JBRTjLZ5A8dQjkR8WVR2_RnOeKZ_2HXD48vc1zSwj8UtBKUpZrQeyv6ZnALsEM-GkFMESv830tSyYbrylzLU4wlkDu02HEV1X8NYfLvDQ-o-jy0-K0iDgf" alt="Winter" />
     <div>Winter</div>
   </div>
