--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -110,6 +110,14 @@
 </head>
 <body>
 
+  <!-- navbar -->
+  <nav>
+    <h2>Adv Web & Mobile</h2>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+    </ul>
+  </nav>
+
 <h1>📚 Book Explorer</h1>
 
 <!-- search -->
