--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <li><a href="single-books.html">Milestone 1: JSON Book Display</a></li>
       <li><a href="book-search.html">Milestone 2: Book Search</a></li>
       <li><a href="book-search-ajax.html">Milestone 3: Books Search AJAX</a></li>
-      <li><a href="#">Milestone 4 (Coming Soon)</a></li>
+      <li><a href="spa-ui.html">Milestone 4: SPA UI (Coming Soon)</a></li>
     </ul>
   </main>
 
