--- a/spa-ui.html
+++ b/spa-ui.html
@@ -9,10 +9,11 @@
     body {
       font-family: Arial, sans-serif;
       background: #f4f4f4;
+      color: #333;
       margin: 0;
-      padding: 0;
     }
 
+    /* navbar */
     nav {
       background-color: #F7CAC9;
       color: white;
@@ -126,7 +127,7 @@
     }
 
     .tab-buttons button.active {
-      background-color: #e91e63;
+      background-color: #F7CAC9;
     }
   </style>
 </head>
@@ -136,7 +137,7 @@
   <nav>
     <h2>Adv Web & Mobile</h2>
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
     </ul>
   </nav>
 
