--- a/spa-ui.html
+++ b/spa-ui.html
@@ -98,6 +98,12 @@
       align-items: center;
     }
 
+    .books.grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
     .book-item {
       background: white;
       padding: 10px;
