--- a/spa-ui.html
+++ b/spa-ui.html
@@ -15,11 +15,13 @@
 
     /* navbar */
     nav {
-      background-color: #F7CAC9;
-      color: white;
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      background-color: #F7CAC9;
+      color: white;
       padding: 1rem 2rem;
+      flex-wrap: wrap;
     }
 
     nav ul {
