--- a/spa-ui.html
+++ b/spa-ui.html
@@ -2,7 +2,7 @@
 <html lang="="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Book Explorer - Milestone 4</title>
+  <title>SPA UI</title>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mustache@4.2.0/mustache.min.js"></script>
   <style>
