--- a/single-books.html
+++ b/single-books.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Single Book Display</title>
+  <title>JSON Book Display</title>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <style>
     body {
