--- a/book-search-ajax.html
+++ b/book-search-ajax.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Book Explorer</title>
+  <title>Book Search AJAX</title>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <style>
     body {
